# Farsight-latest

./: CMakeLists.txt  README.md
ClusClus/: Heatmap.cpp  HeatmapWindow.cpp
DARPAScripts/NucSegInParallel/: re_write_input_images .py
NuclearSegmentation/exe/: SOMA_MAIN.cpp.orig  SomaExtraction.cpp.orig  SomaExtraction.h.orig
PatternAnalysis/: CMakeLists.txt  CMakeLists.txt.orig
PatternAnalysis/STrenD/: CMakeLists.txt  HeatmapWindowForNewSelection.cpp  HeatmapWindowForNewSelection.h  NSC.cpp  OrderedHeatmapWindow.cpp  OrderedHeatmapWindow.h  STrenDAnalysisModel.cpp  STrenDAnalysisModel.h  STrenDkNNGModuleMatch.cpp  STrenDkNNGModuleMatch.h  TrendHeatmapWindow.cpp  TrendHeatmapWindow.h  sptree.cpp  sptree.h  tsne.cpp  tsne.h
SampleEditor/: CMakeLists.txt  SampleEditor.cpp  SampleEditor.h
Tracing/TraceEdit/: CMakeLists.txt  CellTrace.cxx  CellTraceModel.cxx  ConvexHull3D.cxx  ConvexHull3D.h  ImageActors.cxx  ImageActors.h  TraceView3D.cxx  TraceView3D.h
ftkCommon/: ftkUtils.cpp.orig  ftkUtils.h.orig
ftkGUI/: CMakeLists.txt  GraphWindow.cpp  vtk3DView.cpp  vtk3DView.h
